--- a/cyberunner/Game/Base.lproj/Main.storyboard
+++ b/cyberunner/Game/Base.lproj/Main.storyboard
@@ -110,10 +110,10 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OEc-gn-UAy" userLabel="scoreView">
-                                <rect key="frame" x="555.66666666666663" y="5" width="370.33333333333337" height="42.666666666666664"/>
+                                <rect key="frame" x="463" y="20" width="443" height="22"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SCORE: 000000  | BEST SCORE: 000000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="1" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Rhf-pO-sni">
-                                        <rect key="frame" x="0.0" y="0.0" width="370.33333333333331" height="42.666666666666664"/>
+                                        <rect key="frame" x="52" y="0.33333333333333215" width="351" height="21.333333333333332"/>
                                         <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
                                         <color key="textColor" name="appBlue"/>
@@ -121,92 +121,41 @@
                                         <color key="shadowColor" systemColor="secondaryLabelColor"/>
                                         <size key="shadowOffset" width="1" height="-1"/>
                                     </label>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="Rhf-pO-sni" firstAttribute="width" secondItem="OEc-gn-UAy" secondAttribute="width" id="5UR-P8-OyJ"/>
-                                    <constraint firstItem="Rhf-pO-sni" firstAttribute="centerX" secondItem="OEc-gn-UAy" secondAttribute="centerX" id="6VZ-Ny-ohh"/>
-                                    <constraint firstItem="Rhf-pO-sni" firstAttribute="height" secondItem="OEc-gn-UAy" secondAttribute="height" id="LnW-LW-6ZW"/>
-                                    <constraint firstItem="Rhf-pO-sni" firstAttribute="centerY" secondItem="OEc-gn-UAy" secondAttribute="centerY" id="NHN-xs-FVI"/>
-                                </constraints>
-                            </view>
-                            <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Y0H-oe-hBi" userLabel="endView">
-                                <rect key="frame" x="127.66666666666669" y="40.666666666666657" width="670.66666666666652" height="325.66666666666674"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gameOverTitle" translatesAutoresizingMaskIntoConstraints="NO" id="p2X-Id-cXo">
-                                        <rect key="frame" x="0.0" y="0.0" width="670.66666666666663" height="57.333333333333336"/>
-                                    </imageView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VST-Q5-Lht" userLabel="Btn Play Again">
-                                        <rect key="frame" x="172.6666666666666" y="111" width="325.33333333333326" height="104"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rjF-Xy-eXF" userLabel="Button Settings">
+                                        <rect key="frame" x="411" y="0.0" width="22" height="22"/>
+                                        <color key="tintColor" name="appBlue"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" image="gearshape.fill" catalog="system"/>
                                         <connections>
-                                            <action selector="BtnPlayAgainPressed:" destination="BV1-FR-VrT" eventType="touchDown" id="VXG-2e-9vE"/>
-                                            <action selector="BtnPlayAgainReleased:" destination="BV1-FR-VrT" eventType="touchUpInside" id="O4D-0y-Xxg"/>
+                                            <action selector="BtnSettingsPressed:" destination="BV1-FR-VrT" eventType="touchDown" id="Dl1-1t-3zS"/>
+                                            <action selector="BtnSettingsReleased:" destination="BV1-FR-VrT" eventType="touchUpInside" id="rEB-zU-qoo"/>
                                         </connections>
                                     </button>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="btnPlayAgain" translatesAutoresizingMaskIntoConstraints="NO" id="xHC-mw-U6g">
-                                        <rect key="frame" x="172.6666666666666" y="111" width="325.33333333333326" height="104"/>
-                                    </imageView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="xHC-mw-U6g" firstAttribute="height" secondItem="VST-Q5-Lht" secondAttribute="height" id="1Zo-x1-hIj"/>
-                                    <constraint firstItem="xHC-mw-U6g" firstAttribute="centerY" secondItem="VST-Q5-Lht" secondAttribute="centerY" id="Bw8-f5-EhW"/>
-                                    <constraint firstItem="VST-Q5-Lht" firstAttribute="centerY" secondItem="Y0H-oe-hBi" secondAttribute="centerY" id="O9X-qf-thI"/>
-                                    <constraint firstItem="xHC-mw-U6g" firstAttribute="centerX" secondItem="VST-Q5-Lht" secondAttribute="centerX" id="ZiT-GC-3Wm"/>
-                                    <constraint firstItem="xHC-mw-U6g" firstAttribute="width" secondItem="VST-Q5-Lht" secondAttribute="width" id="c73-cb-oLV"/>
-                                    <constraint firstItem="p2X-Id-cXo" firstAttribute="top" secondItem="Y0H-oe-hBi" secondAttribute="top" id="jlC-d9-4Sc"/>
-                                    <constraint firstItem="p2X-Id-cXo" firstAttribute="width" secondItem="Y0H-oe-hBi" secondAttribute="width" id="kzO-78-2ly"/>
-                                    <constraint firstItem="p2X-Id-cXo" firstAttribute="centerX" secondItem="Y0H-oe-hBi" secondAttribute="centerX" id="pXO-y8-sY0"/>
-                                    <constraint firstItem="VST-Q5-Lht" firstAttribute="centerX" secondItem="Y0H-oe-hBi" secondAttribute="centerX" id="skp-iT-qLc"/>
-                                    <constraint firstItem="VST-Q5-Lht" firstAttribute="width" secondItem="Y0H-oe-hBi" secondAttribute="height" multiplier="1:1" id="ude-Cb-CSE"/>
-                                </constraints>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="atx-tG-Jhc" userLabel="soundButtonView">
-                                <rect key="frame" x="54.000000000000007" y="19.999999999999996" width="92.666666666666686" height="42.666666666666657"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8HL-Bz-eff" userLabel="btnSound">
-                                        <rect key="frame" x="0.0" y="0.0" width="92.666666666666671" height="42.666666666666664"/>
-                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                        <connections>
-                                            <action selector="BtnSoundPressed:" destination="BV1-FR-VrT" eventType="touchUpInside" id="7Wj-ar-HuQ"/>
-                                        </connections>
-                                    </button>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="soundOn" translatesAutoresizingMaskIntoConstraints="NO" id="JJ3-LC-VgK" userLabel="btnSoundImage">
-                                        <rect key="frame" x="20.333333333333329" y="-4.6666666666666643" width="52" height="52"/>
-                                    </imageView>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="8HL-Bz-eff" firstAttribute="centerY" secondItem="atx-tG-Jhc" secondAttribute="centerY" id="3s1-O7-5l2"/>
-                                    <constraint firstItem="8HL-Bz-eff" firstAttribute="height" secondItem="atx-tG-Jhc" secondAttribute="height" id="KHZ-FY-w6u"/>
-                                    <constraint firstItem="8HL-Bz-eff" firstAttribute="width" secondItem="atx-tG-Jhc" secondAttribute="width" id="QoB-0E-DqY"/>
-                                    <constraint firstItem="JJ3-LC-VgK" firstAttribute="centerY" secondItem="8HL-Bz-eff" secondAttribute="centerY" id="VWP-4A-asA"/>
-                                    <constraint firstItem="JJ3-LC-VgK" firstAttribute="centerX" secondItem="8HL-Bz-eff" secondAttribute="centerX" id="Zwo-bp-L32"/>
-                                    <constraint firstItem="8HL-Bz-eff" firstAttribute="centerX" secondItem="atx-tG-Jhc" secondAttribute="centerX" id="kdc-56-0KD"/>
+                                    <constraint firstItem="Rhf-pO-sni" firstAttribute="trailing" secondItem="OEc-gn-UAy" secondAttribute="trailing" constant="-40" id="5Eu-FX-we2"/>
+                                    <constraint firstItem="rjF-Xy-eXF" firstAttribute="centerY" secondItem="OEc-gn-UAy" secondAttribute="centerY" id="9ZI-zT-PDI"/>
+                                    <constraint firstItem="rjF-Xy-eXF" firstAttribute="width" secondItem="OEc-gn-UAy" secondAttribute="height" multiplier="1:1" id="KjA-sP-4sQ"/>
+                                    <constraint firstItem="Rhf-pO-sni" firstAttribute="leading" secondItem="OEc-gn-UAy" secondAttribute="leading" constant="52" id="UDQ-bW-72R"/>
+                                    <constraint firstItem="Rhf-pO-sni" firstAttribute="centerY" secondItem="rjF-Xy-eXF" secondAttribute="centerY" id="Ysx-sT-8GY"/>
+                                    <constraint firstItem="rjF-Xy-eXF" firstAttribute="leading" secondItem="Rhf-pO-sni" secondAttribute="trailing" constant="8" symbolic="YES" id="v3W-Wa-VJb"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="4qk-I5-YsI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Y0H-oe-hBi" firstAttribute="centerX" secondItem="4qk-I5-YsI" secondAttribute="centerX" id="0g0-8M-nFt"/>
-                            <constraint firstItem="OEc-gn-UAy" firstAttribute="top" secondItem="4qk-I5-YsI" secondAttribute="top" constant="5" id="3Zm-bB-Lm5"/>
-                            <constraint firstItem="Y0H-oe-hBi" firstAttribute="centerY" secondItem="4qk-I5-YsI" secondAttribute="centerY" id="6xr-iC-Ldd"/>
                             <constraint firstAttribute="bottom" secondItem="MQM-en-e5J" secondAttribute="bottom" constant="21" id="7aX-Cf-NBs"/>
                             <constraint firstItem="qHt-uT-FOp" firstAttribute="width" secondItem="GpM-6M-qPB" secondAttribute="width" id="BM5-mw-EyV"/>
-                            <constraint firstItem="Y0H-oe-hBi" firstAttribute="width" secondItem="4qk-I5-YsI" secondAttribute="width" multiplier="0.8" id="DaR-jk-oe2"/>
-                            <constraint firstItem="atx-tG-Jhc" firstAttribute="height" secondItem="3se-qz-xqx" secondAttribute="height" multiplier="0.1" id="F7T-sp-GTi"/>
-                            <constraint firstItem="atx-tG-Jhc" firstAttribute="width" secondItem="3se-qz-xqx" secondAttribute="width" multiplier="0.1" id="FzW-nw-N7l"/>
                             <constraint firstItem="Jjb-t0-G1j" firstAttribute="height" secondItem="GpM-6M-qPB" secondAttribute="height" id="HQK-7V-hgC"/>
                             <constraint firstItem="Jjb-t0-G1j" firstAttribute="width" secondItem="GpM-6M-qPB" secondAttribute="width" id="Hgr-ah-Qf6"/>
+                            <constraint firstItem="OEc-gn-UAy" firstAttribute="top" secondItem="4qk-I5-YsI" secondAttribute="top" constant="20" id="HwQ-O8-li0"/>
+                            <constraint firstAttribute="trailing" secondItem="OEc-gn-UAy" secondAttribute="trailing" constant="20" id="J2R-5F-GYo"/>
                             <constraint firstItem="IHI-JN-9aw" firstAttribute="width" secondItem="4qk-I5-YsI" secondAttribute="width" multiplier="0.15" id="J4x-Og-efK"/>
                             <constraint firstAttribute="bottom" secondItem="IHI-JN-9aw" secondAttribute="bottom" constant="21" id="MZV-Da-Qqn"/>
-                            <constraint firstItem="OEc-gn-UAy" firstAttribute="width" secondItem="3se-qz-xqx" secondAttribute="width" multiplier="0.4" id="OhX-9h-9pe"/>
-                            <constraint firstAttribute="trailing" secondItem="OEc-gn-UAy" secondAttribute="trailing" id="SCQ-KA-Gu0"/>
+                            <constraint firstItem="OEc-gn-UAy" firstAttribute="leading" secondItem="3se-qz-xqx" secondAttribute="leading" constant="463" id="Qm0-de-pbf"/>
                             <constraint firstItem="MQM-en-e5J" firstAttribute="height" secondItem="IHI-JN-9aw" secondAttribute="height" id="Viw-IT-y8r"/>
                             <constraint firstItem="IHI-JN-9aw" firstAttribute="leading" secondItem="3se-qz-xqx" secondAttribute="leading" constant="44" id="aAD-5f-sJg"/>
-                            <constraint firstItem="Y0H-oe-hBi" firstAttribute="height" secondItem="4qk-I5-YsI" secondAttribute="height" multiplier="0.8" id="hGj-Ls-gA6"/>
-                            <constraint firstItem="atx-tG-Jhc" firstAttribute="top" secondItem="4qk-I5-YsI" secondAttribute="top" constant="20" id="kS1-el-Tgm"/>
-                            <constraint firstItem="OEc-gn-UAy" firstAttribute="height" secondItem="3se-qz-xqx" secondAttribute="height" multiplier="0.1" id="kif-LC-7QI"/>
-                            <constraint firstItem="atx-tG-Jhc" firstAttribute="leading" secondItem="4qk-I5-YsI" secondAttribute="leading" constant="10" id="sae-7N-Znn"/>
                             <constraint firstItem="qHt-uT-FOp" firstAttribute="height" secondItem="GpM-6M-qPB" secondAttribute="height" id="vPJ-SI-VDV"/>
                             <constraint firstItem="MQM-en-e5J" firstAttribute="width" secondItem="IHI-JN-9aw" secondAttribute="width" id="y91-Jc-Uc9"/>
                             <constraint firstAttribute="trailing" secondItem="MQM-en-e5J" secondAttribute="trailing" constant="44" id="z7s-gM-eDk"/>
@@ -217,15 +166,11 @@
                         <outlet property="btnDownView" destination="gN9-De-X2i" id="QV1-lS-ZNw"/>
                         <outlet property="btnKick" destination="Jjb-t0-G1j" id="chL-Gz-z91"/>
                         <outlet property="btnKickView" destination="8Q1-qI-cyS" id="Erp-oT-6aJ"/>
-                        <outlet property="btnPlayAgain" destination="VST-Q5-Lht" id="6HT-8d-ALk"/>
-                        <outlet property="btnPlayAgainView" destination="xHC-mw-U6g" id="z75-ru-Tu8"/>
                         <outlet property="btnPunch" destination="qHt-uT-FOp" id="9d9-5W-8U0"/>
                         <outlet property="btnPunchView" destination="vws-mx-XQ6" id="oAO-1a-AfB"/>
-                        <outlet property="btnSound" destination="8HL-Bz-eff" id="dqG-X8-TTx"/>
-                        <outlet property="btnSoundView" destination="JJ3-LC-VgK" id="Q7R-HB-lSL"/>
+                        <outlet property="btnSettings" destination="rjF-Xy-eXF" id="2tV-gm-msS"/>
                         <outlet property="btnUp" destination="GpM-6M-qPB" id="8u0-fm-que"/>
                         <outlet property="btnUpView" destination="PaE-1k-Vre" id="Nb6-Mk-iML"/>
-                        <outlet property="endView" destination="Y0H-oe-hBi" id="iW9-1g-kRi"/>
                         <outlet property="leftBtnsView" destination="IHI-JN-9aw" id="S85-Bq-gBe"/>
                         <outlet property="rightBtnsView" destination="MQM-en-e5J" id="lBg-Di-zFq"/>
                         <outlet property="scoreLabel" destination="Rhf-pO-sni" id="iJC-A0-Fnm"/>
@@ -242,11 +187,9 @@
         <image name="btnDown" width="64" height="64"/>
         <image name="btnFoot" width="128" height="128"/>
         <image name="btnKick" width="64" height="64"/>
-        <image name="btnPlayAgain" width="328" height="104"/>
         <image name="btnPunch" width="64" height="64"/>
         <image name="btnUp" width="64" height="64"/>
-        <image name="gameOverTitle" width="413.33334350585938" height="57.333332061767578"/>
-        <image name="soundOn" width="52" height="52"/>
+        <image name="gearshape.fill" catalog="system" width="128" height="121"/>
         <namedColor name="appBlue">
             <color red="0.22400000691413879" green="0.65499997138977051" blue="0.96899998188018799" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
